--- a/nextjs-better-auth-pg-trpc/package.json
+++ b/nextjs-better-auth-pg-trpc/package.json
@@ -11,26 +11,26 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.2",
-    "@tanstack/react-query": "^5.69.0",
-    "@trpc/client": "^11.0.0",
-    "@trpc/next": "^11.0.0",
-    "@trpc/react-query": "^11.0.0",
-    "@trpc/server": "^11.0.0",
-    "better-auth": "^1.2.4",
+    "@tanstack/react-query": "^5.71.1",
+    "@trpc/client": "^11.0.1",
+    "@trpc/next": "^11.0.1",
+    "@trpc/react-query": "^11.0.1",
+    "@trpc/server": "^11.0.1",
+    "better-auth": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
-    "lucide-react": "^0.483.0",
-    "next": "15.2.3",
+    "lucide-react": "^0.485.0",
+    "next": "15.2.4",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.4",
+    "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -39,9 +39,10 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.30.5",
+    "drizzle-kit": "^0.30.6",
     "tailwindcss": "^4",
     "tsx": "4.19.3",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.7.0"
 }
